# SelfieMulticlassSegmentation

./: .gitignore  README.md  pyproject.toml
src/selfiemulticlasssegmentation/: __init__.py  multiclass_segmentation_image.py  multiclass_segmentation_video.py  multiclass_segmentation_webcam.py
src/selfiemulticlasssegmentation/assets/models/: README.md
